# steam-cli

./: Cargo.toml
src/: main.rs
src/application/: mod.rs
src/application/usecases/: mod.rs  scrape_sales.rs
src/application/utils/: csv_writer.rs
src/domain/models/: mod.rs  steam_sales.rs
src/domain/traits/: csv_record.rs  mod.rs
