[package]
name = "steam_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "steam_cli"
path = "src/main.rs"

[lib]
name = "steam_cli"
path = "src/lib.rs"

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
